feat: create nav menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,26 +11,75 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <article class="container">
-      <h1>Hello World!</h1>
-      <p>
-        <strong>Lorem ipsum dolor</strong>, sit amet consectetur adipisicing
-        elit. Vero adipisci quibusdam numquam excepturi reprehenderit natus
-        ratione atque necessitatibus distinctio sapiente nihil eveniet, vel,
-        voluptatum eius aliquid facere veniam <a href="">molestiae eaque!</a>
-      </p>
-      <button class="btn">button</button>
-    </article>
-    <article class="container section">
-      <h1>Hello World!</h1>
-      <p>
-        <strong>Lorem ipsum dolor</strong>, sit amet consectetur adipisicing
-        elit. Vero adipisci quibusdam numquam excepturi reprehenderit natus
-        ratione atque necessitatibus distinctio sapiente nihil eveniet, vel,
-        voluptatum eius aliquid facere veniam <a href="">molestiae eaque!</a>
-      </p>
-      <button class="btn">button</button>
-    </article>
+    <header class="header container">
+      <nav>
+        <ul class="header__menu">
+          <li>
+            <a class="header__link" href="#about">Sobre</a>
+          </li>
+          <li>
+            <a class="header__link" href="#featured">Projetos</a>
+          </li>
+          <li>
+            <a class="header__link" href="#contact">Contato</a>
+          </li>
+          <li class="header__line"></li>
+          <li>
+            <button class="header__sun">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <circle cx="12" cy="12" r="4" />
+                <path d="M12 2v2" />
+                <path d="M12 20v2" />
+                <path d="m4.93 4.93 1.41 1.41" />
+                <path d="m17.66 17.66 1.41 1.41" />
+                <path d="M2 12h2" />
+                <path d="M20 12h2" />
+                <path d="m6.34 17.66-1.41 1.41" />
+                <path d="m19.07 4.93-1.41 1.41" />
+              </svg>
+            </button>
+          </li>
+          <li>
+            <a href="#" class="header__resume btn">Currículo</a>
+          </li>
+        </ul>
+        <button class="header__bars">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <line x1="4" x2="20" y1="12" y2="12" />
+            <line x1="4" x2="20" y1="6" y2="6" />
+            <line x1="4" x2="20" y1="18" y2="18" />
+          </svg>
+        </button>
+      </nav>
+    </header>
+    <footer class="pallette container">
+      <div class="pallette__color color1"></div>
+      <div class="pallette__color color2"></div>
+      <div class="pallette__color color3"></div>
+      <div class="pallette__color color4"></div>
+      <div class="pallette__color color5"></div>
+      <div class="pallette__color color6"></div>
+    </footer>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
