feat: create hero section

--- a/index.html
+++ b/index.html
@@ -72,14 +72,38 @@
         </button>
       </nav>
     </header>
-    <footer class="pallette container">
+    <main>
+      <section class="hero container">
+        <img class="hero__img" src="/hero-pic.png" alt="profile picture" />
+        <h2 class="hero__subtitle">Olá, meu nome é André</h2>
+        <h1 class="hero__title">
+          FRONT-END WEB<br />
+          DEVELOPER
+        </h1>
+        <p class="hero__description">
+          Entusiasta da programação e de suas ferramentas incríveis,
+          <strong>
+            se especializando na criação de sites responsivos e fidedignos ao
+            design </strong
+          >, apaixonado por programar desde o primeiro problema solucionado com
+          javascript.
+        </p>
+        <a
+          class="hero__btn btn"
+          href="https://www.linkedin.com/in/andre-web-dev"
+        >
+          Entre em contato
+        </a>
+      </section>
+    </main>
+    <div class="pallette container">
       <div class="pallette__color color1"></div>
       <div class="pallette__color color2"></div>
       <div class="pallette__color color3"></div>
       <div class="pallette__color color4"></div>
       <div class="pallette__color color5"></div>
       <div class="pallette__color color6"></div>
-    </footer>
+    </div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
