feat: create about section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </header>
     <main>
       <section class="hero container">
-        <img class="hero__img" src="/hero-pic.png" alt="profile picture" />
+        <img class="hero__img" src="/profile-pic.png" alt="Profile picture" />
         <h2 class="hero__subtitle">Olá, meu nome é André</h2>
         <h1 class="hero__title">
           FRONT-END WEB<br />
@@ -84,19 +84,47 @@
           Entusiasta da programação e de suas ferramentas incríveis,
           <strong>
             se especializando na criação de sites responsivos e fidedignos ao
-            design </strong
-          >, apaixonado por programar desde o primeiro problema solucionado com
-          javascript.
+            design</strong
+          >, apaixonado por programar desde minha primeira solução de um
+          problema utilizando javascript.
         </p>
         <a
           class="hero__btn btn"
           href="https://www.linkedin.com/in/andre-web-dev"
+          target="_blank"
         >
           Entre em contato
         </a>
       </section>
+      <section class="about container section">
+        <div class="about__content">
+          <h2 class="about__title">Sobre</h2>
+          <p class="about__description">
+            Comecei a estudar programação com JavaScript, HTML e CSS, após ter
+            construído uma base nestas linguagens 'core', passei para
+            ferramentas mais complexas.
+          </p>
+          <p class="about__description">
+            Pude contar com a orientação e críticas de um desenvolvedor sênior,
+            que ensionou-me conceitos mais complexos como,
+            <strong>versionamento de código</strong> com git e github e
+            <strong>noções básicas de UI/UX</strong>.
+          </p>
+          <p class="about__description">
+            Atualmente, pratico a construção de aplicações web utilizando
+            ReactJS, Typescript e NextJS e também, estudo
+            <strong>algoritmos e estrutura de dados</strong> utilizando a
+            plataforma 'leetcode'.
+          </p>
+          <hr class="about__hr" />
+        </div>
+        <div class="about__img-container">
+          <img class="about__img" src="/logos1.jpg" alt="" />
+        </div>
+      </section>
+      <section class="featured container section"></section>
     </main>
-    <div class="pallette container">
+    <div class="pallette">
       <div class="pallette__color color1"></div>
       <div class="pallette__color color2"></div>
       <div class="pallette__color color3"></div>
