feat: create featured project section

--- a/index.html
+++ b/index.html
@@ -116,13 +116,62 @@
             <strong>algoritmos e estrutura de dados</strong> utilizando a
             plataforma 'leetcode'.
           </p>
-          <hr class="about__hr" />
         </div>
-        <div class="about__img-container">
+        <div class="about__img--container">
           <img class="about__img" src="/logos1.jpg" alt="" />
         </div>
       </section>
-      <section class="featured container section"></section>
+      <section class="featured container section">
+        <div class="featured__wrapper">
+          <h2 class="featured__title">Portfolio</h2>
+          <h3 class="featured__subtitle">Projeto em destaque</h3>
+        </div>
+        <div class="featured__introduction">
+          <div class="featured__img--container">
+            <img
+              class="featured__img"
+              src="/portfolio-screenshot.jpg"
+              alt="portfolio screenshot"
+            />
+          </div>
+          <div>
+            <p class="featured__description">
+              Este portfolio foi desenvolvido com a metodologia
+              <strong>'mobile first'</strong> em mente, assim como
+              <strong>semântica e acessibilidade</strong>, sendo responsivo em
+              diferentes dispositivos. Também fazendo o uso da convenção de
+              nomes 'BEM' para classes, priorizando por um
+              <strong>código limpo e de fácil manutenibilidade</strong>.
+            </p>
+            <p class="featured__description">
+              Por ser um projeto pequeno, visando sua longevidade e reduzir a
+              dependência de fontes externas, não foi utilizado bibliotecas de
+              terceiros, apenas a ferramenta Vite para gerar uma versão de
+              produção reduzindo o tamanho final do código.
+            </p>
+          </div>
+        </div>
+
+        <div class="featured__info--container">
+          <div>
+            <h3 class="featured__label">Tech stack</h3>
+            <ul class="featured__tech--stack">
+              <li class="featured__info">Vite</li>
+              <li class="featured__info">HTML</li>
+              <li class="featured__info">CSS</li>
+              <li class="featured__info">Javascript</li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="featured__label">Tipo do projeto</h3>
+            <p class="featured__info">Front-end</p>
+          </div>
+          <div>
+            <h3 class="featured__label">Criado em</h3>
+            <p class="featured__info">Agosto 2023 - presente</p>
+          </div>
+        </div>
+      </section>
     </main>
     <div class="pallette">
       <div class="pallette__color color1"></div>
