feat: create projects section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             plataforma 'leetcode'.
           </p>
         </div>
-        <div class="about__img--container">
+        <div class="about__img--wrapper">
           <img class="about__img" src="/logos1.jpg" alt="" />
         </div>
       </section>
@@ -127,7 +127,7 @@
           <h3 class="featured__subtitle">Projeto em destaque</h3>
         </div>
         <div class="featured__introduction">
-          <div class="featured__img--container">
+          <div class="featured__img--wrapper">
             <img
               class="featured__img"
               src="/portfolio-screenshot.jpg"
@@ -167,8 +167,53 @@
             <p class="featured__info">Front-end</p>
           </div>
           <div>
-            <h3 class="featured__label">Criado em</h3>
+            <h3 class="featured__label">Linha do tempo</h3>
             <p class="featured__info">Agosto 2023 - presente</p>
+          </div>
+        </div>
+      </section>
+      <section class="work container section">
+        <h2 class="work__title">Projetos</h2>
+        <p class="work__description">
+          Pela minha falta de experiência profissional, essa seção será dedicada
+          a projetos pessoais, com o objetivo de demonstrar habilidades exigidas
+          no contexto da profissão de desenvolvedor.
+        </p>
+        <div class="work__container">
+          <!-- Project 1 -->
+          <h3 class="work__project--title">Projeto 1</h3>
+          <div class="work__img--wrapper work__image1">
+            <img src="" alt="Imagem do projeto 1" />
+          </div>
+          <div class="work__project work__content1">
+            <h3 class="work__project--subtitle">Lorem, ipsum dolor</h3>
+            <p class="work__project--description1">
+              sit amet consectetur adipisicing elit. Temporibus libero, dolore
+              officiis quaerat vero unde voluptates
+            </p>
+            <p class="work__project--description2">
+              quas at vel voluptate dolor atque doloremque. Aut non officiis
+              reiciendis, accusamus ut repellendus?
+            </p>
+            <a class="btn work__project--btn" href="#">Website</a>
+          </div>
+
+          <!-- Project 2 -->
+          <h3 class="work__project--title">Projeto 2</h3>
+          <div class="work__img--wrapper work__image2">
+            <img src="" alt="Imagem do projeto 2" />
+          </div>
+          <div class="work__project work__content2">
+            <h3 class="work__project-subtitle">Lorem, ipsum dolor</h3>
+            <p class="work__project--description1">
+              sit amet consectetur adipisicing elit. Alias ipsam consequuntur
+              expedita obcaecati libero doloribus tenetur
+            </p>
+            <p class="work__project--description2">
+              doloremque debitis itaque iusto? Quis eum quibusdam magnam
+              delectus aliquid consequatur explicabo cumque nisi.
+            </p>
+            <a class="btn work__project-btn" href="#">Website</a>
           </div>
         </div>
       </section>
