feat: create contact and footer section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         </button>
       </nav>
     </header>
+
     <main>
       <section class="hero container">
         <img class="hero__img" src="/profile-pic.png" alt="Profile picture" />
@@ -96,7 +97,7 @@
           Entre em contato
         </a>
       </section>
-      <section class="about container section">
+      <section id="about" class="about container section">
         <div class="about__content">
           <h2 class="about__title">Sobre</h2>
           <p class="about__description">
@@ -117,17 +118,17 @@
             plataforma 'leetcode'.
           </p>
         </div>
-        <div class="about__img--wrapper">
+        <div class="about__img-wrapper">
           <img class="about__img" src="/logos1.jpg" alt="" />
         </div>
       </section>
-      <section class="featured container section">
+      <section id="featured" class="featured container section">
         <div class="featured__wrapper">
           <h2 class="featured__title">Portfolio</h2>
           <h3 class="featured__subtitle">Projeto em destaque</h3>
         </div>
         <div class="featured__introduction">
-          <div class="featured__img--wrapper">
+          <div class="featured__img-wrapper">
             <img
               class="featured__img"
               src="/portfolio-screenshot.jpg"
@@ -152,10 +153,10 @@
           </div>
         </div>
 
-        <div class="featured__info--container">
+        <div class="featured__info-container">
           <div>
             <h3 class="featured__label">Tech stack</h3>
-            <ul class="featured__tech--stack">
+            <ul class="featured__tech-stack">
               <li class="featured__info">Vite</li>
               <li class="featured__info">HTML</li>
               <li class="featured__info">CSS</li>
@@ -181,35 +182,35 @@
         </p>
         <div class="work__container">
           <!-- Project 1 -->
-          <h3 class="work__project--title">Projeto 1</h3>
-          <div class="work__img--wrapper work__image1">
+          <h3 class="work__project-title">Projeto 1</h3>
+          <div class="work__img-wrapper work__image1">
             <img src="" alt="Imagem do projeto 1" />
           </div>
           <div class="work__project work__content1">
-            <h3 class="work__project--subtitle">Lorem, ipsum dolor</h3>
-            <p class="work__project--description1">
+            <h3 class="work__project-subtitle">Lorem, ipsum dolor</h3>
+            <p class="work__project-description1">
               sit amet consectetur adipisicing elit. Temporibus libero, dolore
               officiis quaerat vero unde voluptates
             </p>
-            <p class="work__project--description2">
+            <p class="work__project-description2">
               quas at vel voluptate dolor atque doloremque. Aut non officiis
               reiciendis, accusamus ut repellendus?
             </p>
-            <a class="btn work__project--btn" href="#">Website</a>
+            <a class="btn work__project-btn" href="#">Website</a>
           </div>
 
           <!-- Project 2 -->
-          <h3 class="work__project--title">Projeto 2</h3>
-          <div class="work__img--wrapper work__image2">
+          <h3 class="work__project-title">Projeto 2</h3>
+          <div class="work__img-wrapper work__image2">
             <img src="" alt="Imagem do projeto 2" />
           </div>
           <div class="work__project work__content2">
             <h3 class="work__project-subtitle">Lorem, ipsum dolor</h3>
-            <p class="work__project--description1">
+            <p class="work__project-description1">
               sit amet consectetur adipisicing elit. Alias ipsam consequuntur
               expedita obcaecati libero doloribus tenetur
             </p>
-            <p class="work__project--description2">
+            <p class="work__project-description2">
               doloremque debitis itaque iusto? Quis eum quibusdam magnam
               delectus aliquid consequatur explicabo cumque nisi.
             </p>
@@ -217,7 +218,21 @@
           </div>
         </div>
       </section>
+      <section id="contact" class="contact container section">
+        <h2 class="contact__title">Precisa de um desenvolvedor front-end?</h2>
+        <p>uefs.andre@gmail.com</p>
+        <h3 class="contact__description">Vamos trabalhar juntos</h3>
+        <a
+          class="contact__btn btn"
+          href="mailto:uefs.andre@gmail.com"
+          target="_blank"
+          >Enviar um email</a
+        >
+      </section>
     </main>
+    <footer class="footer container section">
+      <h3 class="footer__title">~André~</h3>
+    </footer>
     <div class="pallette">
       <div class="pallette__color color1"></div>
       <div class="pallette__color color2"></div>
