--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </li>
           <li class="header__line"></li>
           <li>
-            <button class="header__sun">
+            <button id="theme-toggle" class="header__sun">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
