feat: add 2 projects

--- a/index.html
+++ b/index.html
@@ -180,12 +180,9 @@
           DEVELOPER
         </h1>
         <p class="hero__description">
-          Entusiasta da programação e de suas ferramentas incríveis,
-          <strong>
-            se especializando na criação de sites responsivos e fidedignos ao
-            design</strong
-          >, apaixonado por programar desde minha primeira solução de um
-          problema utilizando javascript.
+          Entusiasta da programação e de suas ferramentas incríveis, se
+          especializando na criação de
+          <strong>sites responsivos e fidedignos ao design</strong>.
         </p>
         <a
           class="hero__btn btn"
@@ -199,21 +196,23 @@
         <div class="about__content">
           <h2 class="about__title">Sobre</h2>
           <p class="about__description">
-            Comecei a estudar programação com JavaScript, HTML e CSS, após ter
-            construído uma base nestas linguagens 'core', passei para
-            ferramentas mais complexas.
+            Movido pela paixão em aprender e embora não tenha tido a
+            oportunidade e condição para trilhar o caminho tradicional de ensino
+            na área de ciências da computação, estou determinado a trilhar esta
+            carreira.
           </p>
           <p class="about__description">
             Pude contar com a orientação e críticas de um desenvolvedor sênior,
-            que ensionou-me conceitos mais complexos como,
-            <strong>versionamento de código</strong> com git e github e
-            <strong>noções básicas de UI/UX</strong>.
+            que ajudou e orientou-me ao longo do caminho, expondo-me também a
+            conceitos mais complexos como,
+            <strong>versionamento de código</strong> com git e github,
+            <strong>noções básicas de UI/UX</strong> e
+            <strong>algoritmos e estrutura de dados</strong>.
           </p>
           <p class="about__description">
-            Atualmente, pratico a construção de aplicações web utilizando
-            ReactJS, Typescript e NextJS e também, estudo
-            <strong>algoritmos e estrutura de dados</strong> utilizando a
-            plataforma 'leetcode'.
+            O aperfeiçoamento vem com a prática, para isso, utilizo as
+            ferramentas que aprendi e tenho conciência que é preciso entender os
+            fundamentos por trás destas tecnologias.
           </p>
         </div>
         <div class="about__img-wrapper">
@@ -275,45 +274,70 @@
       <section class="work container section">
         <h2 class="work__title">Projetos</h2>
         <p class="work__description">
-          Pela minha falta de experiência profissional, essa seção será dedicada
-          a projetos pessoais, com o objetivo de demonstrar habilidades exigidas
-          no contexto da profissão de desenvolvedor.
+          Nesta seção está contido projetos pessoais, com o objetivo de
+          demonstrar habilidades exigidas no contexto da profissão de
+          desenvolvedor.
         </p>
         <div class="work__container">
           <!-- Project 1 -->
-          <h3 class="work__project-title">Projeto 1</h3>
+          <h3 class="work__project-title">Shopping List</h3>
           <div class="work__img-wrapper work__image1">
-            <img loading="lazy" src="" alt="Imagem do projeto 1" />
+            <img
+              loading="lazy"
+              src="/shopping-list_screenshot.jpg"
+              alt="Shopping list screenshot"
+            />
           </div>
           <div class="work__project work__content1">
-            <h3 class="work__project-subtitle">Lorem, ipsum dolor</h3>
+            <h3 class="work__project-subtitle">Shopping List</h3>
             <p class="work__project-description1">
-              sit amet consectetur adipisicing elit. Temporibus libero, dolore
-              officiis quaerat vero unde voluptates
+              Projeto pessoal, front-end, pequeno, utilizando NextJS e uma
+              biblioteca de componentes UI, buscando atender a uma necessidade
+              do dia a dia das pessoas, uma lista de compras que calcula o preço
+              dos itens e do total.
             </p>
             <p class="work__project-description2">
-              quas at vel voluptate dolor atque doloremque. Aut non officiis
-              reiciendis, accusamus ut repellendus?
+              Aprendi com meus erros neste projeto, que não bastava que os
+              componentes da interface coubessem em qualquer tela, era preciso
+              garantir uma boa experiência do usuário.
             </p>
-            <a class="btn work__project-btn" href="#">Website</a>
+            <a
+              class="btn work__project-btn"
+              href="https://github.com/codi-Andre/shopping-list"
+              >Repo</a
+            >
           </div>
 
           <!-- Project 2 -->
-          <h3 class="work__project-title">Projeto 2</h3>
+          <h3 class="work__project-title">Equivalent</h3>
           <div class="work__img-wrapper work__image2">
-            <img loading="lazy" src="" alt="Imagem do projeto 2" />
+            <img
+              loading="lazy"
+              src="/equivalent-screenshot.jpg"
+              alt="Equivalent screenshot"
+            />
           </div>
           <div class="work__project work__content2">
-            <h3 class="work__project-subtitle">Lorem, ipsum dolor</h3>
+            <h3 class="work__project-subtitle">Equivalent</h3>
             <p class="work__project-description1">
-              sit amet consectetur adipisicing elit. Alias ipsam consequuntur
-              expedita obcaecati libero doloribus tenetur
+              Projeto de estudo, front-end com integração a uma API REST. Com a
+              participação de outras 2 pessoas, um desenvolvedor sênior (como
+              orientador) e um nutricionista (como consultor), o projeto é uma
+              ferramenta para ajudar pessoas a calcular o valor equivalente de
+              calorias entre dois alimentos.
             </p>
             <p class="work__project-description2">
-              doloremque debitis itaque iusto? Quis eum quibusdam magnam
-              delectus aliquid consequatur explicabo cumque nisi.
+              O projeto está sendo desenvolvido em ReactJS, com o desafio de
+              migrar o projeto futuramente para mobile e full stack. Entretanto
+              já foi um grande aprendizado até aqui, ter a oportunidade de ser
+              orientado por alguém com muita experiência na área e trabalhar com
+              um profissional de outra área também.
             </p>
-            <a class="btn work__project-btn" href="#">Website</a>
+            <a
+              class="btn work__project-btn"
+              href="https://github.com/codi-Andre/equivalent"
+              >Repo</a
+            >
           </div>
         </div>
       </section>
