feat: new e-commerce project

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       </section>
       <section id="featured" class="featured container section">
         <div class="featured__wrapper">
-          <h2 class="featured__title">Portfolio</h2>
+          <h2 class="featured__title">E-commerce</h2>
           <h3 class="featured__subtitle">Projeto em destaque</h3>
         </div>
         <div class="featured__introduction">
@@ -234,25 +234,31 @@
             <img
               loading="lazy"
               class="featured__img"
-              src="/portfolio-screenshot.jpg"
-              alt="portfolio screenshot"
+              src="/e-commerce.jpg"
+              alt="e-commerce thumbnail"
             />
           </div>
           <div>
             <p class="featured__description">
-              Este portfolio foi desenvolvido com a metodologia
-              <strong>'mobile first'</strong> em mente, assim como
-              <strong>semântica e acessibilidade</strong>, sendo responsivo em
-              diferentes dispositivos. Também fazendo o uso da convenção de
-              nomes 'BEM' para classes, priorizando por um
-              <strong>código limpo e de fácil manutenibilidade</strong>.
+              Site de e-commerce respeitando o design original, responsivo porém
+              sem interatividade, criado a partir do <strong>Figma.</strong>
             </p>
             <p class="featured__description">
-              Por ser um projeto pequeno, visando sua longevidade e reduzir a
-              dependência de fontes externas, não foi utilizado bibliotecas de
-              terceiros, apenas o bundler Vite para gerar uma versão minificada
-              do código, reduzindo o tamanho a ser enviado ao client.
+              Você pode ver por si mesmo e comparar o resultado:
             </p>
+            <ul class="featured__description">
+              <li>
+                <a href="https://codi-andre.github.io/e-commerce/"
+                  >Site criado a partir do design.</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.figma.com/community/file/1096834804853006903/Powerful-E-commerce-Template-for-a-Dynamic-Shopping-Website"
+                  >Design original no Figma.</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
 
@@ -261,9 +267,8 @@
             <h3 class="featured__label">Tech stack</h3>
             <ul class="featured__tech-stack">
               <li class="featured__info">Vite</li>
-              <li class="featured__info">HTML</li>
-              <li class="featured__info">CSS</li>
-              <li class="featured__info">Javascript</li>
+              <li class="featured__info">ReactJS</li>
+              <li class="featured__info">TailWindCSS</li>
             </ul>
           </div>
           <div>
@@ -272,7 +277,7 @@
           </div>
           <div>
             <h3 class="featured__label">Linha do tempo</h3>
-            <p class="featured__info">Agosto 2023 - presente</p>
+            <p class="featured__info">Novembro 2023</p>
           </div>
         </div>
       </section>
